--- a/index5.html
+++ b/index5.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -910,7 +909,7 @@
                                 {q.userAnswer !== null && (
                                     <div className={`p-6 border-t animate-fade-in-up ${q.isCorrect ? 'bg-green-50/50 border-green-100' : 'bg-red-50/50 border-red-100'}`}>
                                         <div className="bg-white rounded-xl p-5 border border-gray-200 flex flex-col md:flex-row gap-5 items-start shadow-sm">
-                                            <div className="w-full md:w-40 aspect-[4/3] rounded-lg overflow-hidden border border-gray-200 bg-gray-100 flex-shrink-0">
+                                            <div className="w-full md:w-40 aspect-video rounded-lg overflow-hidden border border-gray-200 bg-gray-100 flex-shrink-0">
                                                 <img 
                                                     src={`images/${q.image}`}
                                                     className="w-full h-full object-cover" 
@@ -928,8 +927,8 @@
                                                     <div className="text-3xl font-black text-gray-900">{q.term}</div>
                                                     <div className="text-xl font-bold text-red-600 bopomofo">{q.fullZhuyin}</div>
                                                 </div>
-                                                <div className="text-gray-800 text-xl leading-relaxed mb-3 font-medium"><span className="font-bold text-gray-900">釋義：</span>{q.definition}</div>
-                                                <div className="text-gray-600 text-lg italic"><span className="font-bold not-italic text-gray-500">例句：</span>{q.sentence}</div>
+                                                <div className="text-gray-700 text-base leading-relaxed mb-2"><span className="font-bold">釋義：</span>{q.definition}</div>
+                                                <div className="text-gray-600 text-sm italic"><span className="font-bold not-italic">例句：</span>{q.sentence}</div>
                                             </div>
                                         </div>
                                     </div>
