--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             [30, "針灸", "灸", "ㄐㄧㄡˇ", "ㄓㄣ ㄐㄧㄡˇ", "中醫療法。", "針灸可以通經活絡，舒緩疼痛。", "一位中醫師專注地將細針輕輕刺入病人的穴道，背景是傳統中藥房。"],
             [31, "哀悼", "悼", "ㄉㄠˋ", "ㄞ ㄉㄠˋ", "悲傷悼念。", "全國人民為地震中的罹難者哀悼。", "穿著黑色喪服的人們低頭默哀，手持白色花朵，氣氛莊嚴肅穆。"],
             [32, "絢爛", "爛", "ㄒㄩㄢˋ", "ㄒㄩㄢˋ ㄌㄢˋ", "光彩奪目。", "煙火在夜空中綻放，絢爛無比。", "漆黑夜空中綻放著五顏六色盛大的煙火，照亮了地面觀賞的人群，色彩極度豐富飽和。"],
-            [33, "折騰", "騰", "ㄊㄥ", "ㄓㄜ ㄊㄥ", "翻來覆去。引申為折磨。", "病痛把他折騰得瘦了一大圈。", "一個人在床上翻來覆去睡不著，棉被亂成一團，表情顯得疲憊又煩躁。"],
+            [33, "折騰", "騰", "˙ㄊㄥ", "ㄓㄜ ˙ㄊㄥ", "翻來覆去。引申為折磨。", "病痛把他折騰得瘦了一大圈。", "一個人在床上翻來覆去睡不著，棉被亂成一團，表情顯得疲憊又煩躁。"],
             [34, "掌杓", "杓", "ㄕㄠˊ", "ㄓㄤˇ ㄕㄠˊ", "掌管廚房烹飪之事。", "今天的宴席由著名的大廚親自掌杓。", "一位大廚手握巨大的炒鍋杓子，在充滿火氣的廚房裡指揮若定地烹飪。"],
             [35, "整飭", "飭", "ㄔˋ", "ㄓㄥˇ ㄔˋ", "整頓。", "新任局長上任後，大力整飭警紀。", "一位軍官正在整理隊伍，士兵們排列得整整齊齊，制服筆挺，展現紀律嚴明。"],
             [36, "專橫", "橫", "ㄏㄥˋ", "ㄓㄨㄢ ㄏㄥˋ", "★ ㄏㄥˋ：蠻不講理；ㄏㄥˊ：水平。", "他作風專橫，聽不進部屬的意見。", "一個穿著華麗的人指手畫腳，態度傲慢地命令周圍低頭的人，展現霸道的樣子。"],
@@ -163,7 +163,7 @@
             [61, "手握長鈇", "鈇", "ㄈㄨ", "ㄕㄡˇ ㄨㄛˋ ㄔㄤˊ ㄈㄨ", "鍘刀。斧頭。", "劊子手手握長鈇，準備行刑。", "一位古代武士，雙手緊握著一把長柄大斧頭，姿勢威武準備戰鬥。"],
             [62, "撂在地上", "撂", "ㄌㄧㄠˋ", "ㄌㄧㄠˋ ㄗㄞˋ ㄉㄧˋ ㄕㄤˋ", "摔、丟。", "他生氣地把書包撂在地上。", "一個重物（如背包或工具）被隨意且重重地丟在地上，激起一點灰塵。"],
             [63, "放聲大慟", "慟", "ㄊㄨㄥˋ", "ㄈㄤˋ ㄕㄥ ㄉㄚˋ ㄊㄨㄥˋ", "極度悲哀。", "聽到親人過世的消息，他忍不住放聲大慟。", "一個人跪在地上，仰天張大嘴巴痛哭流涕，表現出極度的悲傷。"],
-            [64, "孤癖之隱", "癖", "ㄆㄧˇ", "ㄍㄨ ㄆㄧˇ ㄓ ㄧㄣˇ", "習性、嗜好。", "這是他個人的孤癖之隱，不願對外人說。", "一個人獨自住在遠離人群的深山小屋裡，坐在窗邊喝茶，享受孤獨與隱居生活。"],
+            [64, "孤僻之隱", "僻", "ㄆㄧˇ", "ㄍㄨ ㄆㄧˇ ㄓ ㄧㄣˇ", "習性、嗜好。", "這是他個人的孤癖之隱，不願對外人說。", "一個人獨自住在遠離人群的深山小屋裡，坐在窗邊喝茶，享受孤獨與隱居生活。"],
             [65, "戕摩剝削", "戕", "ㄑㄧㄤˊ", "ㄑㄧㄤˊ ㄇㄛˊ ㄅㄛ ㄒㄩㄝ", "殘害。", "獨裁者戕摩剝削人民，終將被推翻。", "象徵性的畫面，一個貪婪的地主正在從瘦弱的農民手中奪走僅剩的糧食，展現壓榨剝削。"],
             [66, "內心憮然", "憮", "ㄨˇ", "ㄋㄟˋ ㄒㄧㄣ ㄨˇ ㄖㄢˊ", "失意貌。ㄨˇ：失意；ㄈㄨˇ：安撫（通撫）。", "看著破敗的家園，他內心憮然。", "一個人站在落葉紛飛的樹下，表情悵然若失，眼神流露出失落與無奈。"],
             [67, "攻占滬尾", "占", "ㄓㄢˋ", "ㄍㄨㄥ ㄓㄢˋ ㄏㄨˋ ㄨㄟˇ", "攻取並佔領。滬尾為淡水舊稱。", "清法戰爭中，法軍試圖攻占滬尾，但遭遇頑強抵抗。", "清法戰爭的歷史場景，清軍士兵在淡水（滬尾）岸邊英勇抵禦，砲火與煙霧瀰漫。"],
@@ -180,7 +180,7 @@
             [78, "誦詩舞勺", "勺", "ㄓㄨㄛˊ", "ㄙㄨㄥˋ ㄕ ㄨˇ ㄓㄨㄛˊ", "古代的一種樂舞。", "古時學童十三歲學誦詩舞勺。", "古代學堂場景，小學生們搖頭晃腦地背誦詩歌，同時手拿著勺子做著簡單的舞蹈動作（古代小學教育）。"],
             [79, "孰能無惑", "孰", "ㄕㄨˊ", "ㄕㄨˊ ㄋㄥˊ ㄨˊ ㄏㄨㄛˋ", "誰。", "人非聖賢，孰能無惑？", "一位學生滿頭問號，舉手向老師發問，老師微笑準備解答，象徵誰都會有困惑。"],
             [80, "一只皮箱", "只", "ㄓ", "ㄧ ㄓ ㄆㄧˊ ㄒㄧㄤ", "量詞。考試用字若為「隻」亦讀 ㄓ。", "他提著一只皮箱，獨自到台北打拚。", "一個復古的舊皮箱孤零零地放在火車站的月台上，帶有旅行與離別的意象。"],
-            [81, "排比修辭", "比", "ㄅㄧˋ", "ㄆㄞˊ ㄅㄧˋ ㄒㄧㄡ ㄘˊ", "並列。", "這篇文章運用了大量的排比修辭，增強了氣勢。", "畫面上畫著三棵一模一樣的樹、三朵一模一樣的花，整齊排列，象徵句式的重複與整齊。"],
+            [81, "排比修辭", "比", "ㄅㄧˇ", "ㄆㄞˊ ㄅㄧˇ ㄒㄧㄡ ㄘˊ", "並列。", "這篇文章運用了大量的排比修辭，增強了氣勢。", "畫面上畫著三棵一模一樣的樹、三朵一模一樣的花，整齊排列，象徵句式的重複與整齊。"],
             [82, "挑撥離間", "間", "ㄐㄧㄢˋ", "ㄊㄧㄠˇ ㄅㄛ ㄌㄧˊ ㄐㄧㄢˋ", "分化、隔閡。", "不要聽信小人的挑撥離間，破壞了我們的感情。", "一個人在兩群朋友中間，分別對左右兩邊說悄悄話，導致兩邊的人互相怒視。"],
             [83, "故態復萌", "萌", "ㄇㄥˊ", "ㄍㄨˋ ㄊㄞˋ ㄈㄨˋ ㄇㄥˊ", "發生。", "才剛戒菸不久，他又故態復萌了。", "一個剛戒菸的人，又忍不住偷偷拿起了煙，或者剛改掉壞習慣又重犯，表情懊惱。"],
             [84, "陰陽潛移", "潛", "ㄑㄧㄢˊ", "ㄧㄣ ㄧㄤˊ ㄑㄧㄢˊ ㄧˊ", "暗中。", "歲月陰陽潛移，不知不覺我們都老了。", "畫面上同時呈現白天與黑夜的漸層過渡，太陽與月亮同框，象徵時間與陰陽的悄悄變化。"],
@@ -188,7 +188,7 @@
             [86, "陳摶老祖", "摶", "ㄊㄨㄢˊ", "ㄔㄣˊ ㄊㄨㄢˊ ㄌㄠˇ ㄗㄨˇ", "人名。非「博」。", "陳摶老祖是著名的道家人物。", "一位白鬍子的道教老神仙，側身躺在雲端或大石頭上呼呼大睡，悠閒自在。"],
             [87, "戛然而止", "戛", "ㄐㄧㄚˊ", "ㄐㄧㄚˊ ㄖㄢˊ ㄦˊ ㄓˇ", "突然停止。", "掌聲戛然而止，全場屏息以待。", "指揮家手中的指揮棒突然停在半空中，樂團全體靜止，畫面充滿了突然停止的張力。"],
             [88, "舊時欄楯", "楯", "ㄕㄨㄣˇ", "ㄐㄧㄡˋ ㄕˊ ㄌㄢˊ ㄕㄨㄣˇ", "欄杆。", "庭院中還保留著舊時欄楯，古色古香。", "一棟老舊房子前的木頭欄杆，雖然油漆斑駁但充滿回憶，背景有懷舊的庭院。"],
-            [89, "扁牖而居", "牖", "ㄧㄡˇ", "ㄅㄧㄢˇ ㄧㄡˇ ㄦˊ ㄐㄩ", "窗戶。", "陋室雖小，但扁牖而居，倒也清靜。", "簡陋的小屋，只有一扇小小的窗戶，透過窗戶可以看到裡面簡樸的生活環境。"],
+            [89, "甕牖而居", "牖", "ㄧㄡˇ", "ㄨㄥˋ ㄧㄡˇ ㄦˊ ㄐㄩ", "窗戶。", "陋室雖小，但扁牖而居，倒也清靜。", "簡陋的小屋，只有一扇小小的窗戶，透過窗戶可以看到裡面簡樸的生活環境。"],
             [90, "參省乎己", "省", "ㄒㄧㄥˇ", "ㄘㄢ ㄒㄧㄥˇ ㄏㄨ ㄐㄧˇ", "反省。", "君子博學而日參省乎己，則知明而行無過矣。", "一個人對著鏡子，鏡子裡映照出他在反省思考自己的內心，表情嚴肅認真。"],
             [91, "斜暉脈脈", "脈", "ㄇㄛˋ", "ㄒㄧㄝˊ ㄏㄨㄟ ㄇㄛˋ ㄇㄛˋ", "含情凝視的樣子。", "夕陽西下，斜暉脈脈水悠悠。", "夕陽西下，金色的陽光斜斜地灑在平靜的江面上，光影柔和且帶點含情脈脈的感覺。"],
             [92, "祖先墳塋", "塋", "ㄧㄥˊ", "ㄗㄨˇ ㄒㄧㄢ ㄈㄣˊ ㄧㄥˊ", "墓地。", "清明節我們都會回鄉掃墓，祭拜祖先墳塋。", "清明掃墓場景，一個整理乾淨的墓地，後代子孫正在祭拜，背景是青翠的山林，氣氛莊重。"],
