--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
     <script type="text/babel">
         // --- 1. 設定變數 (Configuration) ---
         const MUSIC_CONFIG = {
-            username: 'frank20155',
-            repo: 'interactive_pronunciation',
-            folder: 'sounds/bgm' // 若在根目錄請留空，例如 'Music'
+            username: 'nicktsai88',
+            repo: 'Music',
+            folder: '' // 若在根目錄請留空，例如: ''
         };
 
         const { useState, useEffect, useMemo, useRef, useImperativeHandle, forwardRef } = React;
