--- a/index12.html
+++ b/index12.html
@@ -635,7 +635,7 @@
                                     字音大師 <span className="text-lg md:text-xl block md:inline text-amber-700 font-normal">易混淆字音版</span>
                                 </div>
                             </h1>
-                            <div className="mt-6 flex flex-wrap items-center content-center gap-3 p-4 bg-amber-100/80 backdrop-blur-sm rounded-xl border border-amber-200 shadow-sm h-full md:h-32">
+                            <div className="mt-6 flex flex-wrap items-center gap-3 p-4 bg-amber-100/80 backdrop-blur-sm rounded-xl border border-amber-200 shadow-sm">
                                 <span className="text-amber-900 font-bold text-lg">主公姓名：</span>
                                 <div className="relative flex flex-col sm:flex-row flex-wrap items-start sm:items-center gap-2">
                                     <div className="flex items-center gap-2">
@@ -703,9 +703,9 @@
                             </div>
                         </div>
                         
-                        <div className="flex items-stretch gap-3 w-full md:w-auto">
+                        <div className="flex items-center gap-3 w-full md:w-auto">
                             {/* 進度顯示區域 */}
-                            <div className="flex flex-col items-end justify-center mr-4 hidden md:flex bg-amber-100/90 p-4 rounded-xl backdrop-blur-sm border-2 border-amber-300 shadow-lg transform hover:scale-105 transition-transform h-32 box-border">
+                            <div className="flex flex-col items-end justify-center mr-4 hidden md:flex bg-amber-100/90 p-3 rounded-xl backdrop-blur-sm border-2 border-amber-300 shadow-lg transform hover:scale-105 transition-transform">
                                 <div className="text-lg font-black text-amber-900 mb-1 uppercase tracking-wide">總進度</div>
                                 <div className="flex items-center gap-2">
                                      <div className="w-32 h-4 bg-white rounded-full overflow-hidden border border-gray-300 relative shadow-inner">
@@ -715,10 +715,7 @@
                                 </div>
                             </div>
 
-                            <button onClick={onViewHistory} className="flex-1 md:flex-none justify-center flex flex-col items-center px-5 py-3 bg-amber-100/90 text-amber-900 rounded-xl shadow-lg hover:shadow-xl border-2 border-amber-300 font-bold text-lg transition-all transform hover:scale-105 h-32 min-w-[120px]">
-                                <Icon path={icons.history} className="w-8 h-8 mb-2 text-amber-700"/> 
-                                戰績
-                            </button>
+                            <button onClick={onViewHistory} className="flex-1 md:flex-none justify-center flex items-center px-5 py-3 bg-white/90 backdrop-blur text-gray-700 rounded-xl shadow-sm hover:shadow-md hover:bg-white border-2 border-gray-200 font-bold text-lg transition-all"><Icon path={icons.history} className="w-5 h-5 mr-2"/> 戰績</button>
                         </div>
                     </div>
 
